# platyplaty

./: .gitignore  Makefile  README.md  pyproject.toml
plan/: get-status-command-implementation-plan.md  renderer-implementation-plan.md  stage-2-implementation-plan.md  stage-3-implementation-plan.md  stage-4-implementation-plan.md  textual-migration-plan.md
renderer/: audio_capture.cpp  audio_capture.hpp  audio_capture_start.cpp  client_socket.cpp  client_socket.hpp  command_handler.cpp  command_handler.hpp  command_slot.cpp  command_slot.hpp  event_loop.cpp  event_loop.hpp  key_event.cpp  key_event.hpp  main.cpp  netstring.cpp  netstring.hpp  protocol.cpp  protocol.hpp  renderer_state.hpp  scancode_map.cpp  scancode_map.hpp  server_socket.cpp  server_socket.hpp  shutdown.cpp  shutdown.hpp  socket_thread.cpp  socket_thread.hpp  socket_thread_process.cpp  stderr_event.hpp  visualizer.cpp  visualizer.hpp  window.cpp  window.hpp
src/platyplaty/: __init__.py  __main__.py  app.py  app_actions.py  app_context.py  app_dispatch.py  app_playlist_actions.py  app_shutdown.py  app_startup.py  async_main.py  auto_advance.py  autoplay_advance.py  autoplay_errors.py  autoplay_helpers.py  autoplay_manager.py  autoplay_start.py  autoplay_timer.py  bad_presets.py  build_dispatch_tables.py  command_prompt_handler.py  command_prompt_show.py  command_queue.py  config.py  crash_handler.py  dispatch_tables.py  dispatch_tables_ui.py  errors.py  event_loop.py  example_config.py  focus_helpers.py  generate_config.py  idle_preset.py  keybinding_dispatch.py  main.py  messages.py  netstring.py  (+44 more)
(+394 files in other folders)
