[project]
name = "platyplaty"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=6.2.4",
    "click>=8.3.1",
    "pydantic>=2.12.5",
    "textual>=7.0.0",
]

[dependency-groups]
dev = [
    "ewmh>=0.1.6",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
    "types-cachetools>=6.2.0.20251022",
]

[tool.mypy]
strict = true


[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
